# agention-infer

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
docs/: 01-overview.md  02-architecture.md  03-gguf-format.md  04-quantization.md  05-inference-pipeline.md  06-rocm-hardware.md  07-turbo-quant-kv-cache.md  08-moe-routing.md  09-speedup-multimodel.md  10-build-roadmap.md  11-testing.md  PERFORMANCE_RECOMMENDATIONS.md  benchmark-plan.md  benchmark-progress.md  benchmark-quick-start.md
docs/roadmap/: 00-parity-roadmap.md  baselines.md  phase-0-correctness-harness.md  phase-1-batched-f16-kv.md  phase-2-gpu-performance.md  phase-3-breadth.md  phase-4-sampling-grammar.md  phase-5-server.md  phase-6-differentiators.md
examples/: prof.rs
scripts/: gen_golden.sh
src/: error.rs  lib.rs  loader.rs  parser.rs  runner.rs  sampler.rs  tokenizer.rs  types.rs
src/model/: llama.rs  mod.rs
src/model/llama/: cpu_path.rs  gpu_resident.rs  mod.rs  state.rs  types.rs
src/ops/: backend_select.rs  cpu_backend.rs  kernels.rs  kernels_u8.rs  kernels_wgpu.rs  mod.rs  trace.rs
src/ops/wgpu_backend/: mod.rs  resident.rs
src/quant/: mod.rs  q2_k.rs  q4_k.rs  q5_0.rs  q5_k.rs  q6_k.rs  q8_0.rs  q8_k.rs
tests/: golden.rs  quant_integration.rs
tests/fixtures/golden/: LFM2.5-1.2B-Instruct-Q4_K_M__alpha.txt  LFM2.5-1.2B-Instruct-Q4_K_M__count.txt  LFM2.5-1.2B-Instruct-Q4_K_M__days.txt  LFM2.5-1.2B-Instruct-Q4_K_M__evens.txt  LFM2.5-1.2B-Instruct-Q6_K__alpha.txt  LFM2.5-1.2B-Instruct-Q6_K__count.txt  LFM2.5-1.2B-Instruct-Q6_K__days.txt  LFM2.5-1.2B-Instruct-Q6_K__evens.txt  Qwen3-1.7B-Q8_0__alpha.txt  Qwen3-1.7B-Q8_0__count.txt  Qwen3-1.7B-Q8_0__days.txt  Qwen3-1.7B-Q8_0__evens.txt  Qwen3.5-9B-Q4_K_M__alpha.txt  Qwen3.5-9B-Q4_K_M__count.txt  Qwen3.5-9B-Q4_K_M__days.txt  Qwen3.5-9B-Q4_K_M__evens.txt
