[package]
name    = "gguf-rs"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "gguf-info"
path = "src/bin/gguf-info.rs"

[[bin]]
name = "generate"
path = "src/bin/generate.rs"

[[bin]]
name = "bench"
path = "src/bin/bench.rs"

[[bin]]
name = "vulkan_poc"
path = "src/bin/vulkan_poc.rs"
required-features = ["vulkan-poc"]

[[bin]]
name = "coop_matrix_probe"
path = "src/bin/coop_matrix_probe.rs"
required-features = ["vulkan-poc"]

[[bin]]
name = "generate_trace"
path = "src/bin/generate_trace.rs"

[features]
default = ["cpu"]
cpu   = ["cubecl/cpu"]
hip   = ["cubecl/hip"]
cuda  = ["cubecl/cuda"]
wgpu  = ["cubecl/wgpu"]
metal = ["cubecl/metal"]
# f16 intermediate activations on the GPU-resident path (Stage 4) are the
# DEFAULT fast path — they halve activation bandwidth on shader-f16-capable
# backends (Vulkan/RDNA, the primary target). Build with `f32-activations` to
# opt back into f32 storage where the backend lacks shader-f16 (e.g. wgpu→Metal):
# `--features wgpu,metal,f32-activations`. WgpuBackend asserts the device
# advertises F16 at startup unless this opt-out is set.
f32-activations = []
# Standalone raw-Vulkan dispatch-overhead prototype (src/bin/vulkan_poc.rs) —
# not part of the engine, just measuring whether bypassing wgpu's per-dispatch
# bookkeeping actually lowers per-dispatch cost on this hardware.
vulkan-poc = ["dep:ash"]

[dependencies]
# Core
memmap2   = "0.9"
half      = "2.4"
bytemuck  = "1.21"
sysinfo   = "0.33"
libc      = "0.2"

# GPU compute — one kernel set, all backends
cubecl    = { version = "0.10", default-features = false, features = ["std", "stdlib"] }
cubecl-wgpu = { version = "0.10", optional = true, default-features = false, features = ["msl"] }

# Parallelism — data-parallel matmul over output rows
rayon     = "1.8"

# Error handling
thiserror = "2.0"
anyhow    = "1.0"

# CLI
clap      = { version = "4.5", features = ["derive"] }

# JSON output for benchmarks
serde     = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wide = "1.5.0"

# Raw-Vulkan dispatch-overhead prototype only (feature "vulkan-poc")
ash = { version = "0.38", optional = true }
